--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.2.3",
+    "postgres": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
