--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.2.3",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
